Update cv by resume

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     <nav>
       <a href="#work">
         <div class="icon-briefcase"></div>
-        <div class="name">Work</div>
+        <div class="name">work</div>
       </a>
       <a href="#cv">
         <div class="icon-file"></div>
-        <div class="name">CV</div>
+        <div class="name">resume</div>
       </a>
       <a href="#contact">
         <div class="icon-envelope"></div>
-        <div class="name">Contact</div>
+        <div class="name">contact</div>
       </a>
     </nav>
 
