Add konami code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,18 @@
     <p><a href="#">back to home </a></p>
   </section>
 
-  <script src="build/index.min.js"></script>
+  <div id="menu" hidden>
+    <span class="icon-trophy"></span>
+    <span id="score">0</span>
+
+    <span class="icon-heart"></span>
+    <span id="lifes">3</span>
+
+    <button id="play" class="icon-pause"></button>
+    <button id="exit" class="icon-remove-sign"></button>
+  </div>
+
+  <script src="build/index.js"></script>
 
 </body>
 
