Replace index by index.min

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <button id="exit" class="icon-remove-sign"></button>
   </div>
 
-  <script src="build/index.js"></script>
+  <script src="build/index.min.js"></script>
 
 </body>
 
