fix hide/show menu

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <p><a href="#">back to home </a></p>
   </section>
 
-  <div id="menu" hidden>
+  <div id="menu" style="display:none">
     <span class="icon-trophy"></span>
     <span id="score">0</span>
 
