--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <section id="home">
 
     <header>
-      <h2>Hello world, my name is<h2>
-      <h1>Jérémie Taboada</h1>
+      <h1>jerem_t;</h1>
+      <h2>find some infos about me and what i do:</h2>
     </header>
 
     <nav>
