--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 
   index.html
-  https://github.com/JeremieT/jeremiet.github.com
+  https://github.com/jeremt/jeremt.github.com
   MIT licensed
 
   (c) Jérémie Taboada - <taboada.jeremie@gmail.com>
@@ -15,7 +15,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0;">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>Jeremie T</title>
+  <title>jerem_t;</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
 
