Update Redactional in CV

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 
 <body>
 
+  <!-- Home page -->
+
   <section id="home">
 
     <header>
-      <h1>jeremie taboada</h1>
+      <h1>Jeremie Taboada</h1>
       <h2>find some infos about me and what i do</h2>
     </header>
 
@@ -45,12 +47,16 @@
 
   </section>
 
+  <!-- Default 404 page -->
+
   <section id="default">
     <a href="#" class="icon-remove-sign"></a>
     <h1><span class="icon-warning-sign"></span>404</h1>
     <p>This page doesnt exists yet :)</p>
     <p><a href="#">back to home </a></p>
   </section>
+
+  <!-- Game GUI -->
 
   <div id="menu" style="display:none">
     <span class="icon-trophy"></span>
@@ -62,6 +68,8 @@
     <button id="play" class="icon-pause"></button>
     <button id="exit" class="icon-remove-sign"></button>
   </div>
+
+  <!-- Scripts -->
 
   <script src="build/index.min.js"></script>
 
