--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0;">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>jerem_t;</title>
-  <link rel="stylesheet" href="css/index.css">
+  <title>JeremT - Index</title>
+  <link rel="stylesheet" href="styles/web/index.css">
 </head>
 
 <body>
