Change design and add random quotes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header>
       <h1>Jeremie Taboada</h1>
-      <h2>find some infos about me and what i do</h2>
+      <h2 id="quote"></h2>
     </header>
 
     <nav>
