--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav>
       <a href="#work">
         <div class="icon-briefcase"></div>
-        <div class="name">work</div>
+        <div class="name">projects</div>
       </a>
       <a href="#cv">
         <div class="icon-file"></div>
