--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="icon-briefcase"></div>
         <div class="name">projects</div>
       </a>
-      <a href="#cv">
+      <a href="https://docs.google.com/document/d/1o_tesZvLk8ptZLTAp94PbY6uaRWE1ztGSL3LrxOU468/edit?usp=sharing">
         <div class="icon-file"></div>
         <div class="name">resume</div>
       </a>
