--- a/app/lab_article.html
+++ b/app/lab_article.html
@@ -1,1 +1,1 @@
-<btn icon="close" href="#/lab" id="close"></btn><header><h1>{{articles[name]}}</h1></header><article ng-include="'app/pages/lab/' + name + '.html'"></article>
+<btn icon="close" href="#/lab" id="close"></btn><header><h1>{{articles[name]}}</h1></header><article ng-include="'app/lab/' + name + '.html'"></article>
