--- a/app/lab/glsl_antialiasing_techniques.html
+++ b/app/lab/glsl_antialiasing_techniques.html
@@ -1,22 +1,15 @@
 <p>The purpose of this article is to show some technics to draw simple
 anti-aliased shapes in GLSL shaders. It a good pratice to do so because it's
-faster and more beautiful than post-processed anti-aliasing (because it
-involves a render to texture).
+faster and more precise than post-processed anti-aliasing such as FXAA
+(because it involves a render to texture).
 </p><p>To test our shaders, we will use the following
 <a href="http://threejs.org" target="_blank">THREE.js</a> code that contains
-a rotating plane in front of the camera and apply our shader on it (copy and
-past this code in an html file and open it on a browser).
+a rotating plane and apply our shader on it (copy and past this code in an
+html file and open it on a browser).
 </p><div ui-ace="{onLoad: onEditor, mode: &quot;html&quot;, theme: &quot;flatcolors&quot;}">&lt;!DOCTYPE html&gt;
-&lt;style&gt;
-body {
-  margin: 0;
-}
-&lt;/style&gt;
-
+&lt;style&gt;body {margin: 0;}&lt;/style&gt;
 &lt;div id="canvas"&gt;&lt;/div&gt;
-
 &lt;script src="//ajax.googleapis.com/ajax/libs/threejs/r67/three.min.js"&gt;&lt;/script&gt;
-
 &lt;script id="vertex" type="x-shader/x-vertex"&gt;
 
 varying vec2 vUv;
@@ -27,7 +20,6 @@ void main() {
 }
 
 &lt;/script&gt;
-
 &lt;script id="fragment" type="x-shader/x-fragment"&gt;
 
 #ifndef GL_ES
@@ -47,7 +39,6 @@ void main() {
 }
 
 &lt;/script&gt;
-
 &lt;script&gt;
 
 // config
@@ -96,7 +87,7 @@ var lastTime = 0;
 }();
 
 &lt;/script&gt;
-</div><p>For now, we are just filling all the quad with blue color, like you can see
+</div><p>For now, we are just filling the quad with blue color, like you can see
 in the fragment shader:
 </p><div ui-ace="{onLoad: onEditor, mode: &quot;glsl&quot;, theme: &quot;flatcolors&quot;}">#ifndef GL_ES
 // Non OpenGL ES devices doesnt support precision qualifiers, so we do
@@ -113,11 +104,11 @@ varying highp vec2 vUv;
 void main() {
   gl_FragColor = vec4(color, alpha);
 }
-</div><p>From now, we will update this fragment unil we get our anti-aliased shapes
-working. The first step to apply anti-aliasing is to detect the edge of the
-quad. To do so, we will use the UV coordinates. For instance, if the
-<strong>vUv</strong> value is 0, 0 that means we are in the left corner.
-So we will draw a 10% border around the quad:
+</div><p>From now, we will update this fragment unil we get our anti-aliased rectangle
+shape working. The first step is to detect the border of the quad. To do so,
+we will use the UV coordinates. For instance, if the <strong>vUv</strong>
+value is (0, 0) that means we are in the left corner. So we will draw a 10%
+border around the quad:
 </p><div ui-ace="{onLoad: onEditor, mode: &quot;glsl&quot;, theme: &quot;flatcolors&quot;}">#ifndef GL_ES
 // Non OpenGL ES devices doesnt support precision qualifiers, so we do
 // nothing instead
@@ -136,7 +127,7 @@ void main() {
       1.0 - vUv.x &gt; 0.1 && 1.0 - vUv.y &gt; 0.1)
       gl_FragColor.a = 0.0;
 }
-</div><p>Whenever you write a shader, optimization is really important. So, we will do
+</div><p>When you write a shader, optimization is really important. So, we will do
 2 things:
 </p><ul><li>Factorize the condition for x and y using the function
 <strong>step</strong> (for SIMD optimization).</li><li>Remove the if branch by using artimetic expression instead.</li></ul><div ui-ace="{onLoad: onEditor, mode: &quot;glsl&quot;, theme: &quot;flatcolors&quot;}">#ifndef GL_ES
@@ -211,7 +202,7 @@ void main() {
   gl_FragColor = vec4(color, alpha);
   vec2 border = linearstep(vec2(0), uvPixel, vUv) *
                 linearstep(vec2(0), uvPixel, vec2(1) - vUv);
-  gl_FragColor.a = float(border);
+  gl_FragColor.a = border.x * border.y;
 }
 </div><h2>Bonus</h2><p>The good thing with this technique is that you can use it with a lot of
 different shapes such as circle, triangle or rounded rect.
