--- a/jeremt-icon-button/jeremt-icon-button.html
+++ b/jeremt-icon-button/jeremt-icon-button.html
@@ -2,7 +2,7 @@
 <dom-module id="jeremt-icon-button">
     <template>
         <link rel="stylesheet" href="jeremt-icon-button.css">
-        <div id="icon-button"></div>
+        <div id="icon-button" class="fa"></div>
     </template>
 </dom-module>
 <script type="text/javascript" src="jeremt-icon-button.js"></script>
