--- a/jeremt-card-button/jeremt-card-button.html
+++ b/jeremt-card-button/jeremt-card-button.html
@@ -3,7 +3,7 @@
     <template>
         <link rel="stylesheet" href="jeremt-card-button.css">
         <div id="card">
-            <i id="icon" class="fa"></i><br>
+            <i id="icon" class="fa"></i>
             <span id="description">[[description]]</span>
         </div>
     </template>
