Add articles and theming.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <title>Jeremie TABOADA</title>
         <script src="../webcomponentsjs/webcomponents.js"></script>
         <link rel="import" href="jeremt-app/jeremt-app.html">
+        <link rel="import" href="../prism-element/prism-highlighter.html">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <jeremt-app></jeremt-app>
+    <prism-highlighter></prism-highlighter>
+    <jeremt-app></jeremt-app>
     </body>
 </html>
