--- a/jeremt-card-button/jeremt-card-button.html
+++ b/jeremt-card-button/jeremt-card-button.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../polymer/polymer.html">
 <dom-module id="jeremt-card-button">
+    <link rel="import" type="css" href="jeremt-card-button.css">
     <template>
-        <link rel="stylesheet" href="jeremt-card-button.css">
         <div id="card">
             <i id="icon" class="fa"></i>
             <span id="description">[[description]]</span>
