--- a/jeremt-title/jeremt-title.html
+++ b/jeremt-title/jeremt-title.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../polymer/polymer.html">
 <dom-module id="jeremt-title">
+    <link rel="import" type="css" href="jeremt-title.css">
     <template>
-        <link rel="stylesheet" href="jeremt-title.css">
         <svg viewBox="0 0 500 50">
             <text class="text" text-anchor="middle" x="50%" y="50%" dy=".35em">{{text}}</text>
         </svg>
