--- a/jeremt-app/jeremt-app.html
+++ b/jeremt-app/jeremt-app.html
@@ -1,17 +1,23 @@
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../layout/layout.html">
-<link rel="import" href="../../iron-selector/iron-selector.html">
 <link rel="import" href="../jeremt-style/jeremt-style.html">
 <link rel="import" href="../jeremt-title/jeremt-title.html">
 <link rel="import" href="../jeremt-card-button/jeremt-card-button.html">
 <link rel="import" href="../jeremt-state/jeremt-state.html">
 <link rel="import" href="../jeremt-icon-button/jeremt-icon-button.html">
+<link rel="import" href="../jeremt-article/jeremt-article.html">
 <dom-module id="jeremt-app">
+    <link rel="import" type="css" href="jeremt-app.css">
     <template>
-        <link rel="stylesheet" href="jeremt-app.css">
         <jeremt-state attr-for-state="data-page"
                       root-state="home"
                       current-state="{{_currentPage}}">
+            <nav class="layout horizontal justified" hidden$="[[_isHome(_currentPage)]]">
+                <jeremt-icon-button icon="fa-home" target="#"></jeremt-icon-button>
+                <jeremt-icon-button icon="fa-folder-o" target="#articles"></jeremt-icon-button>
+                <jeremt-icon-button icon="fa-file-text-o" target="https://docs.google.com/document/d/1o_tesZvLk8ptZLTAp94PbY6uaRWE1ztGSL3LrxOU468/pub"></jeremt-icon-button>
+                <jeremt-icon-button icon="fa-envelope-o" target="#contact"></jeremt-icon-button>
+            </nav>
             <div data-page="">
                 <header>
                     <jeremt-title text="JEREMIE TABOADA"></jeremt-title>
@@ -35,18 +41,10 @@
                 </section>
             </div>
             <div data-page="#articles">
-                <jeremt-icon-button class="close-button"
-                                    icon="fa-close"
-                                    on-click="_closeClicked">
-                </jeremt-icon-button>
                 <section>
                     <h1>Articles</h1>
                 </section>
                 <section class="layout horizontal wrap">
-                    <jeremt-card-button class="flex small-column"
-                                        description="The property class"
-                                        target="#articles/the_property_class">
-                    </jeremt-card-button>
                     <jeremt-card-button class="flex small-column"
                                         description="Some c++11 function tricks"
                                         target="#articles/some_c++11_function_tricks">
@@ -55,18 +53,33 @@
                                         description="Anti-aliased shapes in GLSL"
                                         target="#articles/anti-aliased_shapes_in_glsl">
                     </jeremt-card-button>
+                    <jeremt-card-button class="flex small-column"
+                                        description="The property class"
+                                        target="#articles/the_property_class">
+                    </jeremt-card-button>
                 </section>
             </div>
+            <div data-page="#articles/some_c++11_function_tricks">
+                <jeremt-article title="Some c++11 function tricks"
+                                url="../articles/some_c++11_function_tricks.md">
+                </jeremt-article>
+            </div>
+            <div data-page="#articles/anti-aliased_shapes_in_glsl">
+                <jeremt-article title="Anti-aliased shapes in GLSL"
+                                url="../articles/anti-aliased_shapes_in_glsl.md">
+                </jeremt-article>
+            </div>
+            <div data-page="#articles/the_property_class">
+                <jeremt-article title="The property class"
+                                url="../articles/the_property_class.md">
+                </jeremt-article>
+            </div>
             <div data-page="#contact">
-                <jeremt-icon-button class="close-button"
-                                    icon="fa-close"
-                                    on-click="_closeClicked">
-                </jeremt-icon-button>
                 <section>
                     <h1>Contact</h1>
                 </section>
                 <section class="layout horizontal wrap">
-                    <jeremt-card-button class="flex small-column"
+                    <jeremt-card-button class="flex small-column facebook"
                                         icon="fa-facebook"
                                         description="Facebook"
                                         target="https://www.facebook.com/taboada.jeremie">
@@ -99,15 +112,8 @@
                 </section>
             </div>
             <div data-page="*">
-                <jeremt-icon-button class="close-button"
-                                    icon="fa-close"
-                                    on-click="_closeClicked">
-                </jeremt-icon-button>
                 <section>
                     <h1>Page not found!</h1>
-                    <div class="card">
-                        <p>This page doesn't exists or has been deleted, sorry :/</p>
-                    </div>
                 </section>
             </div>
         </jeremt-state>
