--- a/jeremt-icon-button/jeremt-icon-button.html
+++ b/jeremt-icon-button/jeremt-icon-button.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../polymer/polymer.html">
 <dom-module id="jeremt-icon-button">
+    <link rel="import" type="css" href="jeremt-icon-button.css">
     <template>
-        <link rel="stylesheet" href="jeremt-icon-button.css">
         <div id="icon-button" class="fa"></div>
     </template>
 </dom-module>
