Add property article.

--- a/jeremt-app/jeremt-app.html
+++ b/jeremt-app/jeremt-app.html
@@ -74,6 +74,12 @@
                                 url="../articles/the_property_class.md">
                 </jeremt-article>
             </div>
+            <!-- Articles ideas -->
+            <!--
+            - C++ on the web with Emscripten
+            - Morphing shapes in GLSL
+            - Distmap based shader
+            -->
             <div data-page="#contact">
                 <section>
                     <h1>Contact</h1>
