Move bower_components folder.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Jeremie TABOADA</title>
-        <script src="../webcomponentsjs/webcomponents.js"></script>
+        <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
         <link rel="import" href="jeremt-app/jeremt-app.html">
-        <link rel="import" href="../prism-element/prism-highlighter.html">
+        <link rel="import" href="bower_components/prism-element/prism-highlighter.html">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
