--- a/jeremt-article/jeremt-article.html
+++ b/jeremt-article/jeremt-article.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../../iron-ajax/iron-ajax.html">
-<link rel="import" href="../../marked-element/marked-element.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bower_components/marked-element/marked-element.html">
 <dom-module id="jeremt-article">
     <link rel="import" type="css" href="jeremt-article.css">
     <template>
