--- a/jeremt-style/jeremt-style.html
+++ b/jeremt-style/jeremt-style.html
@@ -1,5 +1,4 @@
-<link rel="import" href="../../polymer/polymer.html">
-
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <dom-module id="my-style">
     <link rel="stylesheet" href="base-typography.css">
     <link rel="stylesheet" href="base-layout.css">
