--- a/jeremt-card-button/jeremt-card-button.html
+++ b/jeremt-card-button/jeremt-card-button.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <dom-module id="jeremt-card-button">
     <link rel="import" type="css" href="jeremt-card-button.css">
     <template>
