--- a/jeremt-state/jeremt-state.html
+++ b/jeremt-state/jeremt-state.html
@@ -1,2 +1,2 @@
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <script type="text/javascript" src="jeremt-state.js"></script>
