--- a/jeremt-title/jeremt-title.html
+++ b/jeremt-title/jeremt-title.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <dom-module id="jeremt-title">
     <link rel="import" type="css" href="jeremt-title.css">
     <template>
