Fixed style in Firefox. Improved articles style. Finished article "The property class".

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
         <link rel="import" href="jeremt-app/jeremt-app.html">
         <link rel="import" href="bower_components/prism-element/prism-highlighter.html">
+        <link rel="import" href="jeremt-style/jeremt-style.html">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
