--- a/jeremt-article/jeremt-article.html
+++ b/jeremt-article/jeremt-article.html
@@ -13,6 +13,11 @@
             <div class="card">
                 <marked-element markdown="[[articleText]]"></marked-element>
             </div>
+            <footer class="card">
+                If you have any question, or if you want to improve something, <a href="#contact">contact me</a> or
+                submit a pull request on
+                <a target="_blank" href="https://github.com/jeremt/jeremt.github.com/pulls">Github</a>! ;)
+            </footer>
         </section>
     </template>
 </dom-module>
