--- a/jeremt-style/base-layout.html
+++ b/jeremt-style/base-layout.html
@@ -1,3 +1,4 @@
+<style is="custom-style">
 /**
  * This stylesheets contains rules to handle spacing and size of elements.
  */
@@ -22,7 +23,7 @@ html /deep/ .list-item:not(:last-child) {
     border-bottom: 1px solid #cccccc;
 }
 html /deep/ pre {
-    background: #ffffff;
+    background: rgba(0, 0, 0, .1);
     padding: 20px;
     border-radius: 5px;
     overflow: auto;
@@ -37,3 +38,4 @@ html /deep/ td {
     padding: 10px;
     border: 1px solid #cccccc;
 }
+</style>
