--- a/jeremt-style/base-typography.html
+++ b/jeremt-style/base-typography.html
@@ -1,3 +1,4 @@
+<style is="custom-style">
 /**
  * This stylesheet contains generic typography rules.
  */
@@ -47,3 +48,4 @@ html /deep/ table {
 html /deep/ p {
     line-height: 1.5em;
 }
+</style>
