Added hidden articles ideas.

--- a/jeremt-app/jeremt-app.html
+++ b/jeremt-app/jeremt-app.html
@@ -56,6 +56,22 @@
                                         description="The property class"
                                         target="#articles/the_property_class">
                     </jeremt-card-button>
+                    <jeremt-card-button hidden class="flex small-column"
+                                        description="C++ on the web with Emscripten"
+                                        target="#articles/c++_on_the_web_with_emscripten">
+                    </jeremt-card-button>
+                    <jeremt-card-button hidden class="flex small-column"
+                                        description="Distmaps and Shaders"
+                                        target="#articles/distmaps_and_shaders">
+                    </jeremt-card-button>
+                    <jeremt-card-button hidden class="flex small-column"
+                                        description="Understanding stying in Polymer"
+                                        target="#articles/understanding_styling_in_polymer">
+                    </jeremt-card-button>
+                    <jeremt-card-button hidden class="flex small-column"
+                                        description="My game engine"
+                                        target="#articles/my_game_engine">
+                    </jeremt-card-button>
                 </section>
             </div>
             <div data-page="#articles/some_c++11_function_tricks">
@@ -73,12 +89,6 @@
                                 url="../articles/the_property_class.md">
                 </jeremt-article>
             </div>
-            <!-- Articles ideas -->
-            <!--
-            - C++ on the web with Emscripten
-            - Morphing shapes in GLSL
-            - Distmap based shader
-            -->
             <div data-page="#contact">
                 <section>
                     <h1>Contact</h1>
