--- a/jeremt-style/theme-typography.html
+++ b/jeremt-style/theme-typography.html
@@ -34,6 +34,7 @@ html /deep/ a:hover {
 
 code {
     font-family: "Source Code Pro", sans-serif;
+    font-size: .9em;
     color: #cccccc;
 }
 </style>
