Fix generic properties article.

--- a/jeremt-app/jeremt-app.html
+++ b/jeremt-app/jeremt-app.html
@@ -45,16 +45,16 @@
                 </section>
                 <section class="layout horizontal wrap">
                     <jeremt-card-button class="flex small-column"
-                                        description="Some c++11 function tricks"
-                                        target="#articles/some_c++11_function_tricks">
+                                        description="Some C++11 function tricks"
+                                        target="#articles/some_cpp11_function_tricks">
                     </jeremt-card-button>
                     <jeremt-card-button class="flex small-column"
                                         description="Anti-aliased shapes in GLSL"
                                         target="#articles/anti-aliased_shapes_in_glsl">
                     </jeremt-card-button>
                     <jeremt-card-button class="flex small-column"
-                                        description="The property class"
-                                        target="#articles/the_property_class">
+                                        description="A generic Property class"
+                                        target="#articles/a_generic_property_class">
                     </jeremt-card-button>
                     <jeremt-card-button hidden class="flex small-column"
                                         description="C++ on the web with Emscripten"
@@ -74,9 +74,9 @@
                     </jeremt-card-button>
                 </section>
             </div>
-            <div data-page="#articles/some_c++11_function_tricks">
-                <jeremt-article title="Some c++11 function tricks"
-                                url="../articles/some_c++11_function_tricks.md">
+            <div data-page="#articles/some_cpp11_function_tricks">
+                <jeremt-article title="Some C++11 function tricks"
+                                url="../articles/some_cpp11_function_tricks.md">
                 </jeremt-article>
             </div>
             <div data-page="#articles/anti-aliased_shapes_in_glsl">
@@ -84,9 +84,9 @@
                                 url="../articles/anti-aliased_shapes_in_glsl.md">
                 </jeremt-article>
             </div>
-            <div data-page="#articles/the_property_class">
-                <jeremt-article title="The property class"
-                                url="../articles/the_property_class.md">
+            <div data-page="#articles/a_generic_property_class">
+                <jeremt-article title="A generic Property class"
+                                url="../articles/a_generic_property_class.md">
                 </jeremt-article>
             </div>
             <div data-page="#contact">
