--- a/jeremt-app/jeremt-app.html
+++ b/jeremt-app/jeremt-app.html
@@ -115,9 +115,9 @@
                                         target="https://twitter.com/JeremieTaboada">
                     </jeremt-card-button>
                     <jeremt-card-button class="flex small-column"
-                                        icon="fa-google-plus"
-                                        description="googleplus"
-                                        target="https://plus.google.com/106788167698511705100/posts">
+                                        icon="fa-instagram"
+                                        description="instagram"
+                                        target="https://www.instagram.com/jeremietaboada/">
                     </jeremt-card-button>
                     <jeremt-card-button class="flex small-column"
                                         icon="fa-envelope"
