Added new website

--- a/index.html
+++ b/index.html
@@ -4,16 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeremie Taboada</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;800&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="index.css" />
+    <title>jeremtab</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="root">
-        <h1>HI, I'M JÉRÉMIE TABOADA!</h1>
-        <h2>I MADE A NEW A NEW PORTFOLIO WITH THREE FIBER, <a href="https://jeremtab.vercel.app/" target="_blank">GO CHECK IT OUT</a>!</h2>
-    </div>
+    <section id="presentation">
+        <img src="assets/avatar.png" alt="me" />
+        <h1>Hi! I'm Jérémie 👋</h1>
+        <p>
+            I'm french developer / designer living in Paris.<br>
+            I like new projects, making experiments, games, and learning new stuff!
+        </p>
+        <div id="contact">
+            <a target="_blank" title="Github" href="https://github.com/jeremt"><img src="assets/github.svg" /></a>
+            <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/jeremie-taboada-16495959/"><img src="assets/linkedin.svg" /></a>
+            <a target="_blank" title="Instagram" href="https://www.instagram.com/jeremtab"><img src="assets/instagram.svg" /></a>
+            <a target="_blank" title="Resume" href="/assets/resume.pdf"><img src="assets/resume.svg" /></a>
+        </div>
+        <a href="#projects" class="btn">View my projects</a>
+    </section>
+    <section id="projects">
+        <h2>Projects I've worked on lately...</h2>
+        <div id="grid">
+            <div class="project">
+                <img src="assets/project-voltapp.png" />
+                <h3>Voltapp</h3>
+                <h4>UX / Dev / R&D</h4>
+                <p>Voltapp is a tool that allows people to create apps and websites without coding. I'm mostly working on the design & UX of the project as well as some engine core features and R&D development.</p>
+                <a target="_blank" href="https://www.voltapp.tech/">Open the project</a>
+            </div>
+            <div class="project">
+                <img src="assets/project-jsjourney.png" />
+                <h3>JS Journey</h3>
+                <h4>Creator</h4>
+                <p>JS Journey is a side project I’m making on my free time. This is a website to learn programming via Javascript from scratch. The idea is to make a fun and progressive way to learn various concepts and best practices!</p>
+                <a target="_blank" href="https://js-journey.vercel.app/">Open the project</a>
+            </div>
+            <div class="project">
+                <img src="assets/project-bastoon.png" />
+                <h3>Bastoon</h3>
+                <h4>Creator</h4>
+                <p>Bastoon is a deck-building cards game from 2 to 4 players. Players are placed on a board and some cards are constrained by there range and the players positions.</p>
+            </div>
+            <div class="project">
+                <img src="assets/project-frog.png" />
+                <h3>Frog</h3>
+                <h4>Game dev / Game design / Godot</h4>
+                <p>Bastoon is a deck-building cards game from 2 to 4 players. Players are placed on a board and some cards are constrained by there range and the players positions.</p>
+            </div>
+        </div>
+        <a href="#" class="btn">Back to top</a>
+    </section>
 </body>
 </html>
